--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -10,6 +10,7 @@
 // bower:scss
 // endbower
 @import 'foundation/scss/foundation';
+@import 'angular-material/angular-material';
 @import "font-awesome/scss/font-awesome";
 @import "compass";
 @import "compass/support";
